# quad-software

./: quad-sdk  quad-sdk.pub  setup.sh
apply_force/: CMakeLists.txt  apply_force.yaml  package.xml
apply_force/include/apply_force/: apply_force.h
apply_force/src/: apply_force.cpp  apply_force_node.cpp
apply_force_pkg/: CMakeLists.txt  apply_force.yaml  package.xml
apply_force_pkg/src/: apply_force_node.cpp
body_force_estimator/scripts/: path_following.py
install/: local_setup.sh  setup.sh
install/RBDL/include/rbdl/: rbdl_config.h
install/RBDL/lib/: librbdl.so.3.0.0
install/RBDL/lib/pkgconfig/: rbdl.pc
install/RBDL/share/RBDL/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mocap_optitrack/lib/mocap_optitrack/: mocap_node
install/mocap_optitrack/share/mocap_optitrack/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mocap_optitrack/share/mocap_optitrack/cmake/: mocap_optitrackConfig.cmake
install/quad_logger/lib/quad_logger/: bag_reader.py
install/quad_logger/share/quad_logger/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/quad_logger/share/quad_logger/cmake/: quad_loggerConfig.cmake
install/quad_msgs/share/quad_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/quad_msgs/share/quad_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_quad_msgs__rosidl_generator_cExport-noconfig.cmake  export_quad_msgs__rosidl_generator_cExport.cmake  export_quad_msgs__rosidl_generator_cppExport.cmake  export_quad_msgs__rosidl_generator_pyExport-noconfig.cmake  export_quad_msgs__rosidl_generator_pyExport.cmake  export_quad_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_quad_msgs__rosidl_typesupport_fastrtps_cExport.cmake  quad_msgsConfig.cmake  rosidl_cmake-extras.cmake  (+12 more)
local_planner/: local_planner.yaml
local_planner/src/: local_planner.cpp
log/: latest_build
my_gazebo_world/: CMakeLists.txt  package.xml
my_gazebo_world/models/split_belt_treadmill/: model.config  model.sdf
my_gazebo_world/worlds/: treadmill_world.world
nmpc_controller/: CMakeLists.txt
nmpc_controller/include/nmpc_controller/: quad_nlp.h
nmpc_controller/scripts/: main.m
nmpc_controller/scripts/generated_codes/cpp/: eval_g_spirit.cpp  eval_hess_g_spirit.cpp  eval_hess_g_spirit.h  eval_jac_g_spirit.cpp  eval_jac_g_spirit.h
nmpc_controller/scripts/generated_codes/matlab/: legDynamics.m
nmpc_controller/src/: nmpc_controller.cpp
quad_logger/: CMakeLists.txt  package.xml  setup_deps.sh
quad_logger/scripts/: EKF_Velocity.fig  EKF_pose.fig  parseQuadBag.m  parseQuadBagDirect.m  processLogBeam.m  processLogDirect.m  processLogEKF.m  processLogEKFDirectory.m  read_bag.py  runAllBags  runAllBags.m
quad_msgs/: CMakeLists.txt
quad_msgs/msg/: BodyForceEstimate.msg
quad_simulator/: setup_deps.sh
quad_simulator/gazebo_scripts/include/: wrench_plugin.h
quad_simulator/gazebo_scripts/src/: contact_state_publisher_node.cpp  wrench_plugin.cpp
quad_simulator/gazebo_scripts/worlds/7_12_in_stairs/: 7_12_in_stairs.ply  7_12_in_stairs.sldprt  7_12_in_stairs.stl  7_12_in_stairs.world
quad_simulator/gazebo_scripts/worlds/single_beam_014m_width/: single_beam_014m_width.ply  single_beam_014m_width.sldprt  single_beam_014m_width.stl  single_beam_014m_width.world
quad_simulator/gazebo_scripts/worlds/single_beam_long_reduction/: single_beam_long_reduction.ply  single_beam_long_reduction.sldprt  single_beam_long_reduction.stl  single_beam_long_reduction.world
quad_simulator/gazebo_scripts/worlds/thin_beam/: thin_beam.ply  thin_beam.sldprt  thin_beam.stl  thin_beam.world
quad_simulator/gazebo_scripts/worlds/wide_beam/: wide_beam.ply  wide_beam.sldprt  wide_beam.stl  wide_beam.world
quad_simulator/other/sensor_description/depth_camera/: model.config  model.sdf
quad_simulator/other/sensor_description/imu/: model.sdf
quad_simulator/spirit_description/sdf_mesh/: spirit.sdf
quad_simulator/split_belt_description/: CMakeLists.txt  package.xml
quad_simulator/split_belt_description/sdf/: model.config  split_belt.sdf  split_belt_treadmill.sdf
quad_simulator/spot_description/sdf_mesh/: spot.sdf
quad_simulator/spot_description/urdf/: spot.urdf
quad_simulator/vision60_description/: CMakeLists.txt
quad_simulator/vision60_description/sdf_mesh/: vision60.sdf
quad_simulator/vision60_description/urdf/: vision60.urdf
quad_utils/: CMakeLists.txt  package.xml  setup_deps.sh
quad_utils/config/: filter_chain.yaml  vision60.yaml
quad_utils/include/quad_utils/: math_utils.hpp  mesh_to_grid_map_converter.hpp  quad_kd.hpp  rviz_interface.hpp  trajectory_publisher.hpp
quad_utils/launch/: control.launch  force_app.launch  load_global_params.launch  load_global_params.py  load_robot_params.launch  mapping.launch  planning.launch  quad_gazebo.launch  quad_plan.launch  quad_spawn.launch  quad_visualization.launch  remote_driver.launch  robot_driver.launch  split_belt_gazebo.launch  test_belt.launch  treadmill_world.launch  underbrush_gazebo.launch  visualization_plugins.launch
quad_utils/rviz/: quad_viewer.rviz
realsense_grid_map/: CMakeLists.txt  package.xml
realsense_grid_map/launch/: quad_with_realsense.launch
realsense_grid_map/src/: realsense_grid_map_node.cpp
robot_driver/: robot_driver.yaml
robot_driver/include/robot_driver/estimators/: ekf_estimator.h
robot_driver/src/: robot_driver.cpp
robot_driver/src/estimators/: ekf_estimator.cpp
split_belt_controller/: CMakeLists.txt  package.xml  split_belt_controller.yaml
split_belt_controller/include/split_belt_controller/: split_belt_controller.h
split_belt_controller/src/: split_belt_controller.cpp  split_belt_controller_node.cpp
treadmill_ros_client/: CMakeLists.txt  package.xml
treadmill_ros_client/src/: treadmill_ros_client.cpp
(+1425 files in other folders)
