<?xml version="1.0"?>
<package format="3">
  <name>quad_logger</name>
  <version>0.1.0</version>
  <description>quad_logger</description>

  <maintainer email="dologan@andrew.cmu.edu">David Ologan</maintainer>
  <author>David Ologan</author>


  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>rclpy</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
